# worldturtle-haskell

./: .gitignore  .travis.yml  ChangeLog.md  LOGOTRANSCODE.md  README.md  package.yaml  stack.yaml  turtle-haskell.cabal  worldturtle.hsfiles
app/: Main.hs
docs/hello-worldturtle/: conf.py  index.rst
docs/hello-worldturtle/content/: setting-up.rst  turtlecommand-monad.rst  worldturtle-tour.rst
docs/hello-worldturtle/lessons/: setting-up.rst  worldturtle-tour.rst
src/: WorldTurtle.hs
src/WorldTurtle/: Commands.hs  Shapes.hs
src/WorldTurtle/Internal/: Commands.hs  Coords.hs  Turtle.hs
worldturtle/: ChangeLog.md  WorldTurtle.hs  worldturtle.cabal
worldturtle-examples/: LICENSE  worldturtle-examples.cabal
worldturtle-examples/branch/: Main.hs
worldturtle-examples/clock/: Main.hs
worldturtle-examples/hilbert/: Main.hs
worldturtle-examples/lsystem/: Main.hs
worldturtle-examples/parallelcircles/: Main.hs
worldturtle-examples/parallelserialcomparison/: Main.hs
worldturtle-examples/spiralsquare/: HueShift.hs  Main.hs
worldturtle-examples/spiralstar/: Main.hs
worldturtle-examples/square/: Main.hs
worldturtle-examples/star/: Main.hs
worldturtle-examples/tree/: Main.hs
worldturtle-tests/: execgraph.sh  worldturtle-tests.cabal
worldturtle-tests/drawtriangle/: Main.hs
worldturtle-tests/heading/: Main.hs
worldturtle-tests/labelwait/: Main.hs
worldturtle-tests/spaceleak/: Main.hs
worldturtle/Graphics/: WorldTurtle.hs
worldturtle/Graphics/WorldTurtle/: Color.hs  Commands.hs  Shapes.hs
worldturtle/Graphics/WorldTurtle/Internal/: Commands.hs  Coords.hs  Sequence.hs  Turtle.hs
worldturtle/WorldTurtle/: Commands.hs  Shapes.hs
worldturtle/WorldTurtle/Internal/: Commands.hs  Turtle.hs
