cabal-version: 1.12

name:           worldturtle-examples
version:        0.1.0.0
description:    Examples using the worldturtle library
category:       teaching
homepage:       https://github.com/FortOyer/worldturtle#readme
bug-reports:    https://github.com/FortOyer/worldturtle/issues
author:         Archibald Neil MacDonald
maintainer:     FortOyer@hotmail.co.uk
copyright:      2020 Archibald Neil MacDonald
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/FortOyer/worldturtle

executable star-exe
  main-is: Main.hs
  hs-source-dirs: star
  build-depends:
      base
    , gloss
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts

executable spiralstar-exe
  main-is: Main.hs
  hs-source-dirs: spiralstar
  build-depends:
      base
    , gloss
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts

executable square-exe
  main-is: Main.hs
  hs-source-dirs: square
  build-depends:
      base
    , gloss
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts

executable parallelcircles-exe
  main-is: Main.hs
  hs-source-dirs: parallelcircles
  build-depends:
      base
    , gloss
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts

executable branch-exe
  main-is: Main.hs
  hs-source-dirs: branch
  build-depends:
      base
    , gloss
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts
