cabal-version: 3.0

name:           worldturtle-examples
version:        0.3.0.0
description:    Examples using the worldturtle library
category:       teaching
homepage:       https://github.com/aneilmac/worldturtle-haskell#readme
bug-reports:    https://github.com/aneilmac/worldturtle-haskell/issues
author:         Archibald Neil MacDonald
maintainer:     archibaldnmac@gmail.com
copyright:      2020 Archibald Neil MacDonald
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/aneilmac/worldturtle-haskell

executable star-exe
  main-is: Main.hs
  hs-source-dirs: star
  build-depends:
      base
    , gloss
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts

executable spiralstar-exe
  main-is: Main.hs
  hs-source-dirs: spiralstar
  build-depends:
      base
    , gloss
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts

executable square-exe
  main-is: Main.hs
  hs-source-dirs: square
  build-depends:
      base
    , gloss
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts

executable parallelcircles-exe
  main-is: Main.hs
  hs-source-dirs: parallelcircles
  build-depends:
      base
    , gloss
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts

executable tree-exe
  main-is: Main.hs
  hs-source-dirs: tree
  build-depends:
      base
    , gloss
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts

executable parallelserialcomparison-exe
  main-is: Main.hs
  hs-source-dirs: parallelserialcomparison
  build-depends:
      base
    , gloss
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts

executable spiralsquare-exe
  main-is: Main.hs
  hs-source-dirs: spiralsquare
  build-depends:
      base
    , gloss
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts

executable hilbert-exe
  main-is: Main.hs
  hs-source-dirs: hilbert
  build-depends:
      base
    , gloss
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts

executable clock-exe
  main-is: Main.hs
  hs-source-dirs: clock
  build-depends:
      base
    , gloss
    , worldturtle
    , time
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts

executable lsystem-exe
  main-is: Main.hs
  hs-source-dirs: lsystem
  build-depends:
      base
    , gloss
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts
