cabal-version: 1.12

name:           worldturtle-tests
version:        0.1.0.0
description:    Tests using the worldturtle library
category:       teaching
homepage:       https://github.com/FortOyer/worldturtle-haskell#readme
bug-reports:    https://github.com/FortOyer/worldturtle-haskell/issues
author:         Archibald Neil MacDonald
maintainer:     FortOyer@hotmail.co.uk
copyright:      2020 Archibald Neil MacDonald
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/FortOyer/worldturtle-haskell

executable spaceleak-exe
  main-is: Main.hs
  hs-source-dirs: spaceleak
  build-depends:
      base
    , gloss
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts
