cabal-version: 3.0

name:           worldturtle-tests
version:        0.2.2.0
description:    Tests using the worldturtle library
category:       teaching
homepage:       https://github.com/aneilmac/worldturtle-haskell#readme
bug-reports:    https://github.com/aneilmac/worldturtle-haskell/issues
author:         Archibald Neil MacDonald
maintainer:     archibaldnmac@gmail.com
copyright:      2020 Archibald Neil MacDonald
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/aneilmac/worldturtle-haskell

executable spaceleak-exe
  main-is: Main.hs
  hs-source-dirs: spaceleak
  build-depends:
      base
    , gloss
    , lens
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts

executable drawtriangle-exe
  main-is: Main.hs
  hs-source-dirs: drawtriangle
  build-depends:
      base
    , gloss
    , worldturtle
  default-language: Haskell2010
  ghc-options:
    -O2
    -Wall
    -threaded
    -rtsopts
