cabal-version: 1.12

name:           worldturtle
version:        0.1.0.0
synopsis:       Teaching Haskell through turtle drawing.
description:    Please see the README on GitHub at <https://github.com/FortOyer/worldturtle#readme>
category:       teaching
homepage:       https://github.com/FortOyer/worldturtle#readme
bug-reports:    https://github.com/FortOyer/worldturtle/issues
author:         Archibald Neil MacDonald
maintainer:     FortOyer@hotmail.co.uk
copyright:      2020 Archibald Neil MacDonald
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/FortOyer/worldturtle

library
  exposed-modules:
      WorldTurtle
      WorldTurtle.Commands
      WorldTurtle.Shapes
  other-modules:
      WorldTurtle.Internal.Commands
      WorldTurtle.Internal.Coords
      WorldTurtle.Internal.Turtle
  hs-source-dirs: .
  build-depends:
      base >=4.7 && <5
    , containers >=0.6
    , gloss >=1.13
    , lens >=4.18
    , mtl >=2.2
  default-language: Haskell2010
  ghc-options: 
    -O2
    -Wall

test-suite turtle-haskell-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_worldturtle
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers >=0.6
    , gloss >=1.13
    , lens >=4.18
    , mtl >=2.2
    , turtle-haskell
  default-language: Haskell2010
