cabal-version: 1.12

name:           worldturtle
version:        0.1.0.0
synopsis:       Teaching Haskell through turtle drawing.
description:    Please see the README on GitHub at <https://github.com/FortOyer/worldturtle-haskell#readme>
category:       teaching
homepage:       https://github.com/FortOyer/worldturtle-haskell#readme
bug-reports:    https://github.com/FortOyer/worldturtle-haskell/issues
author:         Archibald Neil MacDonald
maintainer:     FortOyer@hotmail.co.uk
copyright:      2020 Archibald Neil MacDonald
license:        BSD3
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/FortOyer/worldturtle-haskell

library
  exposed-modules:
      Graphics.WorldTurtle
      Graphics.WorldTurtle.Commands
      Graphics.WorldTurtle.Internal.Commands
      Graphics.WorldTurtle.Internal.Coords
      Graphics.WorldTurtle.Internal.Sequence
      Graphics.WorldTurtle.Internal.Turtle
      Graphics.WorldTurtle.Shapes
  build-depends:
      base >=4.7 && <5
    , containers >=0.6
    , gloss >=1.13
    , lens >=4.18
    , mtl >=2.2
  default-language: Haskell2010
  ghc-options: 
    -O2
    -Wall
